[gd_scene load_steps=7 format=3 uid="uid://bgx6bnxgheyai"]

[ext_resource type="Script" path="res://LoadingScreens/settings.gd" id="1_7a7o5"]
[ext_resource type="Theme" uid="uid://n8d1v8f1no87" path="res://Scenes/UI/theme.tres" id="1_awelt"]
[ext_resource type="StyleBox" uid="uid://dcegapm0nemg0" path="res://LoadingScreens/settings.tres" id="1_k7kxy"]
[ext_resource type="AudioStream" uid="uid://cja20afev65ro" path="res://Assets/Audio/button_press_sfx.wav" id="2_a8fms"]
[ext_resource type="FontFile" uid="uid://cuau5ds5vegt0" path="res://Assets/UI/Bungee-Regular.ttf" id="2_p7sx6"]
[ext_resource type="Script" path="res://LoadingScreens/volume_slider.gd" id="5_ej6q0"]

[node name="Settings" type="Panel" node_paths=PackedStringArray("button_sound", "master_slider", "music_slider", "sfx_slider")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7a7o5")
button_sound = NodePath("ButtonSound")
master_slider = NodePath("Panel/VBoxContainer/master_slider")
music_slider = NodePath("Panel/VBoxContainer/music_slider")
sfx_slider = NodePath("Panel/VBoxContainer/sfx_slider")

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a8fms")
volume_db = 4.0
bus = &"Sfx"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.5
offset_top = -165.0
offset_right = 312.5
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_k7kxy")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -41.0
offset_right = 150.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_awelt")

[node name="master_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_awelt")
text = "Master volume"
horizontal_alignment = 1

[node name="master_slider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("5_ej6q0")
bus_name = "Master"

[node name="music_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_awelt")
text = "Music"
horizontal_alignment = 1

[node name="music_slider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("5_ej6q0")
bus_name = "Music"

[node name="sfx_label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_awelt")
text = "Sound effects"
horizontal_alignment = 1

[node name="sfx_slider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("5_ej6q0")
bus_name = "Sfx"

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 37.0
offset_right = 77.0
offset_bottom = 62.0
theme = ExtResource("1_awelt")

[node name="CloseButton" type="Button" parent="Panel/PanelContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.713726, 0.713726, 0.713726, 1)
theme_override_fonts/font = ExtResource("2_p7sx6")
text = "X"
flat = true

[connection signal="drag_ended" from="Panel/VBoxContainer/master_slider" to="." method="_on_master_slider_drag_ended"]
[connection signal="drag_ended" from="Panel/VBoxContainer/music_slider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="Panel/VBoxContainer/sfx_slider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="pressed" from="Panel/PanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
